--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.thymeleaf.suffix=.html
 mybatis.mapper-locations=classpath*:mapper/*.xml
 #起别名。可省略写mybatis的xml中的resultType的全路径
 mybatis.type-aliases-package=com.zy.springboot01.pojo
+#pagehelper分页插件配置
+pagehelper.helper-dialect=mysql
+pagehelper.reasonable=true
+pagehelper.support-methods-arguments=true
+pagehelper.params=count=countSql
