--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
+        <!-- 分页插件       -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.3</version>
+        </dependency>
         <!--jquery依赖-->
         <dependency>
             <groupId>org.webjars</groupId>
@@ -80,6 +86,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+<!--        json-->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.2</version>
+        </dependency>
+
         <!--end spring-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
